# Aneval

./: .env.example  README.md  pyproject.toml  stock_news_summarized.json
src/aneval/etl/: news_summarizer_etl.py
src/aneval/llms/: gemini.py  gpt5o.py
src/aneval/models/: news_article.py
src/aneval/models/response/: geval_rank.py  llm_news_article.py
src/aneval/prompts/: judge.py  summeval.py
src/aneval/services/: news_service.py
src/frontend/: app.py
